--- a/main.css
+++ b/main.css
@@ -15,10 +15,12 @@ body{
   position: relative;
   top: 10%;
 }
+
 .quote {
   text-transform: uppercase;
   font-size: 2.5rem;
   font-family: 'Josefin Sans', sans-serif;
+  margin: 4rem;
 }
 
 .author {
